fix: request dto lombok 수정
- @Getter, @NoArgsConstructor, @AllArgsConstructor, @Builder만 사용하도록 변경(@Data 어노테이션 삭제)
- @NoArgsConstructor는 protected, @AllArgsConstructor는 private 로 접근레벨 설정하여 객체 불변성 보장